# operating-system

./: #README.md#  .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  DOCUMENTATION.md  Doxyfile  INSIGHTS.md  README.md  THIRD_PARTY_LICENSES  TODO.md  TODO.org  build.sh  clang-format.sh  clean.sh  configure-limine.sh  configure.sh  create-iso.sh  linker.ld  out.txt  run-qemu.sh
src/kernel/: #CMakeLists.txt#  .#CMakeLists.txt  CMakeLists.txt  CONVENTIONS.md  kernel.c  kernel.cpp  vga.cpp
src/kernel/arch/i386/: linker.ld
src/kernel/arch/i386/apic/: apic.cpp  apic.hpp
src/kernel/arch/i386/boot/: boot.asm  boot.s
src/kernel/arch/i386/cpu/: cpu.hpp
src/kernel/arch/i386/crt/: crtn.s
src/kernel/arch/i386/gdt/: gdt.cpp  gdt.hpp  gdt.s
src/kernel/arch/i386/interrupts/: idt.cpp  idt.hpp  irq.cpp  irq.hpp  isr.s
src/kernel/arch/i386/paging/: paging.cpp  paging.hpp
src/kernel/arch/i386/pic/: pic.cpp  pic.hpp
src/kernel/arch/i386/process/: process.cpp  process.hpp  process.s
src/kernel/arch/i386/syscall/: syscall.cpp  syscall.hpp  syscall_entry.s
src/kernel/arch/i386/timers/: pit.cpp  pit.hpp  timer.cpp  timer.hpp
src/kernel/arch/i386/tty/: tty.c
src/kernel/arch/i386/vga/: vga.cpp  vga.hpp
src/kernel/arch/i686/: i686.hpp  linker.ld
src/kernel/arch/i686/boot/: boot.s
src/kernel/arch/i686/cpu/: cpu.hpp
src/kernel/arch/i686/gdt/: gdt.cpp  gdt.hpp  gdt.s
src/kernel/arch/i686/interrupts/: idt.cpp  idt.hpp  irq.cpp  irq.hpp
src/kernel/arch/i686/paging/: paging.cpp  paging.hpp
src/kernel/arch/i686/process/: process.cpp  process.hpp
src/kernel/arch/i686/syscall/: syscall.cpp  syscall.hpp
src/kernel/arch/i686/timers/: timer.cpp  timer.hpp
src/kernel/arch/i686/vmm/: vmm.cpp  vmm.hpp
src/kernel/arch/x64/: limine.ld
src/kernel/arch/x64/boot/: limine_entry.cpp
src/kernel/arch/x64/context/: context.hpp  context_switch.s
src/kernel/arch/x64/cpu/: cpu.cpp  cpu.hpp
src/kernel/arch/x64/gdt/: gdt.cpp  gdt.hpp  gdt.s
src/kernel/arch/x64/interrupts/: idt.cpp  idt.hpp  irq.cpp  irq.hpp
src/kernel/arch/x64/memory/: vmm.cpp  vmm.hpp
src/kernel/arch/x64/percpu/: percpu.cpp  percpu.hpp
src/kernel/arch/x64/tls/: tls.cpp  tls.hpp
src/kernel/arch/x64/trap/: syscall_entry.cpp  syscall_entry.hpp  syscall_entry.s
src/kernel/arch/x86_64/: limine.ld  linker.ld
src/kernel/arch/x86_64/boot/: boot64.s  entry.cpp  limine_entry.cpp
src/kernel/arch/x86_64/context/: context.hpp  context_switch.s
src/kernel/arch/x86_64/cpu/: cpu.cpp  cpu.hpp
src/kernel/arch/x86_64/crt/: crti.s
src/kernel/arch/x86_64/entry/: entry.cpp  entry.hpp  syscall_entry.s
src/kernel/arch/x86_64/gdt/: gdt.cpp  gdt.hpp  gdt.s
src/kernel/arch/x86_64/interrupts/: idt.cpp  idt.hpp  irq.cpp  irq.hpp  isr.s
src/kernel/arch/x86_64/memory/: vmm.cpp  vmm.hpp
src/kernel/arch/x86_64/percpu/: percpu.cpp  percpu.hpp
src/kernel/arch/x86_64/process/: process.cpp  process.hpp
src/kernel/arch/x86_64/syscall/: int80_entry.s  syscall.cpp  syscall.hpp  syscall_entry.s
src/kernel/include/: arch.hpp
src/kernel/include/acpi/: acpi.hpp  hpet.hpp  madt.hpp
src/kernel/include/algo/: algo.hpp  string.hpp
src/kernel/include/boot/: boot.hpp
src/kernel/include/console/: ansi.hpp  console.hpp  font8x16.hpp
src/kernel/include/containers/: klist.hpp  kshared_ptr.hpp  kstring.hpp  kstring_view.hpp  kunique_ptr.hpp  kvector.hpp
src/kernel/include/crt/: crt.h
src/kernel/include/exclusive/: katomic.hpp  kspinlock.hpp  kspinlock_irqsave.hpp
src/kernel/include/fmt/: fmt.hpp
src/kernel/include/framebuffer/: framebuffer.hpp
src/kernel/include/fs/: fs.hpp  fs_file_ops.hpp  vfs.hpp
src/kernel/include/kassert/: kassert.hpp
src/kernel/include/kpanic/: kpanic.hpp
src/kernel/include/kprint/: kprint.hpp
src/kernel/include/kprintf/: kprintf.hpp
src/kernel/include/linux/: dirent.hpp  ioctl.hpp  mman.hpp  syscall.hpp
src/kernel/include/log/: log.hpp
src/kernel/include/memory/: memory.hpp  pmm.hpp  slab.hpp
src/kernel/include/process/: elf.hpp  process.hpp
src/kernel/include/scheduler/: scheduler.hpp
src/kernel/include/shell/: shell.hpp
src/kernel/include/string/: string.hpp
src/kernel/include/syscall/: sys_fd.hpp  sys_mem.hpp  sys_prctl.hpp  sys_proc.hpp  sys_sleep.hpp  sys_thread.hpp
src/kernel/include/timer/: timer.hpp
src/kernel/include/tty/: tty.hpp
src/kernel/lib/acpi/: acpi.cpp  hpet.cpp  madt.cpp
src/kernel/lib/acpica/: acpica_glue.cpp  acpica_glue.h  acpica_osl.c
src/kernel/lib/algo/: algo.cpp
src/kernel/lib/boot/: boot.cpp  limine-boot.cpp
src/kernel/lib/console/: ansi.cpp  console.cpp
src/kernel/lib/containers/: kstring.cpp  kstring_view.cpp
src/kernel/lib/crt/: crt.c
src/kernel/lib/framebuffer/: framebuffer.cpp
src/kernel/lib/fs/: fs.cpp  fs_file_ops.cpp  vfs.cpp
src/kernel/lib/kpanic/: kpanic.cpp
src/kernel/lib/kprintf/: kprintf.cpp
src/kernel/lib/log/: log.cpp
src/kernel/lib/memory/: memory.cpp  new.cpp  pmm.cpp  slab.cpp
src/kernel/lib/panic/: panic.cpp
src/kernel/lib/process/: elf.cpp  process.cpp
src/kernel/lib/scheduler/: RoundRobinScheduler.cpp  scheduler.cpp
src/kernel/lib/shell/: shell.cpp
src/kernel/lib/syscall/: sys_fd.cpp  sys_mem.cpp  sys_prctl.cpp  sys_proc.cpp  sys_sleep.cpp  sys_thread.cpp
src/kernel/lib/timer/: timer.cpp
src/kernel/lib/tty/: tty.cpp
src/kernel/test/: test.cpp  test.hpp
src/kernel/test/algo/: test_algo.cpp
src/kernel/test/containers/: test_klist.cpp  test_kshared_ptr.cpp  test_kstring.cpp  test_kstring_view.cpp  test_kunique_ptr.cpp  test_kvector.cpp
src/kernel/test/exclusive/: test_katomic.cpp  test_kspinlock.cpp  test_kspinlock_irqsave.cpp
src/kernel/test/fmt/: test_fmt.cpp
src/kernel/test/fs/: test_fs.cpp
src/kernel/test/memory/: test_kmalloc.cpp  test_pmm.cpp  test_slab.cpp  test_vmm.cpp
src/libc/: #CMakeLists.txt#  CMakeLists.txt
src/libc/include/: string.h
src/libc/stdio/: printf.c  putchar.c
src/libc/string/: memcmp.c  memcpy.c  memmove.c  memset.c  strlen.c
src/user/: CMakeLists.txt  a.c  a.out  b.c  c.c  hello.c  ls.c  musl.c  shell.c  user.ld
(+114 files in other folders)
